--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -110,9 +110,9 @@ div#icreate-section(style="--section-color: var(--purple)")
   section.subsection
     input#project-details-toggle(type="checkbox")
 
-    .projects__macintosh
+    .macintosh
       img(src="/static/macintosh.svg" alt="")
-      .img-container
+      .macintosh__img-container
         img#projects-img-1.screenshot.visible(src=firstProject.img.gifSrc alt=firstProject.img.alt)
         img#projects-img-2.screenshot
     
