--- a/src/routes/me/styles.scss
+++ b/src/routes/me/styles.scss
@@ -581,13 +581,12 @@
     grid-area: body;
   }
 
-  .projects__macintosh {
+  .macintosh {
     grid-area: macintosh;
     justify-self: end;
     align-self: end;
     max-width: 400px;
     margin-top: 50px;
-    position: relative;
     z-index: -1;
 
     @media (max-width: $tablet-breakpoint) {
@@ -596,23 +595,12 @@
       align-self: center;
     }
 
-    img {
-      width: 100%;
-    }
-    .img-container {
-      position: absolute;
-      top: 11.5%;
-      left: 11%;
-      width: 78%;
-      overflow: hidden;
-
-      img {
+    .macintosh__img-container {
+      > img {
         opacity: 0;
-        transform-origin: bottom center;
-        background: #333;
       }
 
-      img.visible {
+      .visible {
         animation: macintosh-image-glitch-in 0.4s step-start forwards;
       }
 
@@ -623,39 +611,6 @@
         right: 0;
         bottom: 0;
       }
-
-      &::before {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        background: rgba(0, 0, 0, 0.2);
-        z-index: 1;
-        animation: macintosh-scan-line 4s linear infinite;
-      }
-
-      &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: radial-gradient(transparent 0%, rgba(49, 25, 2, 0.2)),
-          linear-gradient(transparent, rgba(0, 0, 0, 0.05)) repeat;
-        background-size: 100% 100%, 100% 1%;
-      }
-    }
-  }
-
-  @keyframes macintosh-scan-line {
-    from {
-      top: 0%;
-      opacity: 1;
-    }
-    to {
-      top: 100%;
-      opacity: 0.1;
     }
   }
 
