--- a/src/routes/projects/styles.scss
+++ b/src/routes/projects/styles.scss
@@ -155,10 +155,11 @@
       top: 0;
       left: 0;
       height: 100vh;
-      width: 1000px;
+      width: 800px;
       max-width: 100vw;
       transform: translateX(-100%);
       transition: transform 0.3s;
+      overflow-y: scroll;
     }
 
     .background {
@@ -169,13 +170,56 @@
 
     article {
       .content {
-        max-width: 700px;
+        max-width: 600px;
         width: 100%;
         margin: auto;
         padding: 20px;
+        color: var(--body-color-dark);
 
-        h2 {
-          font-size: 44px;
+        .macintosh {
+          max-width: 500px;
+          height: auto;
+          margin: auto;
+          z-index: -1;
+
+          h2 {
+            position: absolute;
+            left: -25px;
+            right: -25px;
+            bottom: 0;
+            font-size: 44px;
+            text-align: center;
+            margin-bottom: 75px;
+            background: var(--bg-color);
+            border: 5px solid var(--section-color);
+            padding: 10px;
+          }
+        }
+
+        .timeframe {
+          font-family: var(--header-font);
+          color: var(--body-color);
+          font-weight: bold;
+          font-size: 36px;
+        }
+
+        .tags {
+          margin-bottom: 60px;
+        }
+
+        .link {
+          display: flex;
+          align-items: center;
+          margin: 30px 0;
+          color: inherit;
+
+          svg {
+            margin-right: 20px;
+          }
+        }
+
+        .body {
+          margin-top: 60px;
         }
       }
     }
