--- a/src/routes/projects/page.pug
+++ b/src/routes/projects/page.pug
@@ -13,7 +13,7 @@ mixin project-template(project)
     a.project__headline.img-link(href='#' + project.hash)
       .img-link__img-container
         if project.videoSrc
-          video(muted autoplay loop)
+          video(preload="none" poster=project.img.src muted loop)
             source(src=project.videoSrc type="video/webm")
         else
           img(src=project.img.gifSrc || project.img.src, alt=project.img.alt)
@@ -52,7 +52,7 @@ section(style="--section-color: var(--red)")
           h2 #{project.title}
           img(src="/static/macintosh.svg" alt="")
           .macintosh__img-container
-            video(muted autoplay loop)
+            video(preload="none" poster=project.img.src muted loop)
               source(src=project.videoSrc type="video/webm")
 
         p.timeframe #{project.timeframe}
