--- a/src/routes/_layout/layout.pug
+++ b/src/routes/_layout/layout.pug
@@ -9,7 +9,7 @@ html(lang="en-US")
     meta(name='viewport' content='width=device-width,initial-scale=1.0')
 
   body
-    nav
+    nav#site-navigation
       ul#jump-to-sections.mobile
 
       button#jump-to-section-toggle.mobile
