--- a/src/routes/projects/styles.scss
+++ b/src/routes/projects/styles.scss
@@ -1,6 +1,7 @@
 [data-route='projects'] {
   $small-desktop-breakpoint: 1350px;
   $tablet-breakpoint: 1200px;
+  $mobile-breakpoint: 850px;
 
   .tag {
     &:first-of-type {
@@ -13,6 +14,7 @@
     background: var(--bg-color-2);
     padding: 10px;
     margin-right: 20px;
+    margin-bottom: 10px;
   }
 
   section {
@@ -24,6 +26,11 @@
 
     @media (max-width: $tablet-breakpoint) {
       grid-template-columns: 1fr;
+    }
+
+    @media (max-width: $mobile-breakpoint) {
+      row-gap: 100px;
+      padding-top: 0;
     }
 
     h2 {
@@ -81,6 +88,16 @@
         margin-bottom: 40px;
       }
 
+      @media (max-width: $mobile-breakpoint) {
+        h3 {
+          font-size: 36px;
+        }
+
+        .timeframe {
+          font-size: 28px;
+        }
+      }
+
       .tag {
         font-size: 24px;
 
@@ -133,9 +150,22 @@
           }
         }
       }
+
+      @media (max-width: 600px) {
+        grid-template-areas:
+          'title'
+          'timeframe'
+          'tags';
+
+        grid-template-columns: 1fr;
+
+        img {
+          display: none;
+        }
+      }
     }
 
-    @media (max-width: 1700px) {
+    @media (max-width: 1700px) and (min-width: $tablet-breakpoint) {
       margin-right: var(--nav-height);
     }
 
@@ -148,6 +178,12 @@
     position: fixed;
     top: 0;
     left: 0;
+    margin-right: var(--nav-height);
+
+    @media (max-width: $mobile-breakpoint) {
+      margin-right: 0;
+      margin-top: var(--nav-height);
+    }
 
     .background,
     article {
@@ -155,11 +191,16 @@
       top: 0;
       left: 0;
       height: 100vh;
+      overflow-y: scroll;
+    }
+
+    .background,
+    article,
+    nav {
       width: 800px;
       max-width: 100vw;
       transform: translateX(-100%);
       transition: transform 0.3s;
-      overflow-y: scroll;
     }
 
     .background {
@@ -168,13 +209,37 @@
       z-index: -1;
     }
 
+    nav {
+      padding: 10px 20px;
+
+      .close-btn {
+        margin-left: auto;
+        background: var(--bg-color);
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100%;
+
+        svg {
+          width: 50%;
+        }
+      }
+    }
+
     article {
       .content {
         max-width: 600px;
         width: 100%;
         margin: auto;
         padding: 20px;
+        padding-bottom: 200px;
         color: var(--body-color-dark);
+
+        @media (max-width: $mobile-breakpoint) {
+          font-size: 20px;
+        }
 
         .macintosh {
           max-width: 500px;
@@ -184,8 +249,8 @@
 
           h2 {
             position: absolute;
-            left: -25px;
-            right: -25px;
+            left: -20px;
+            right: -20px;
             bottom: 0;
             font-size: 44px;
             text-align: center;
@@ -193,6 +258,10 @@
             background: var(--bg-color);
             border: 5px solid var(--section-color);
             padding: 10px;
+
+            @media (max-width: $mobile-breakpoint) {
+              font-size: 36px;
+            }
           }
         }
 
@@ -226,7 +295,8 @@
 
     &:not(.closed) > article {
       &:target,
-      &:target ~ .background {
+      &:target ~ .background,
+      &:target ~ nav {
         transform: translateX(0);
       }
     }
