--- a/src/routes/_layout/nav-styles.scss
+++ b/src/routes/_layout/nav-styles.scss
@@ -96,10 +96,12 @@
         var(--purple) 66.67%
       );
       background-size: 100% 300%;
-      margin-right: 30px;
+      margin-right: 20px;
 
       height: 100%;
-      padding: 0 20px;
+      padding: 0;
+      padding-left: 20px;
+      padding-right: 15px;
       color: var(--bg-color);
       font-weight: bold;
 
