--- a/src/routes/_layout/global.scss
+++ b/src/routes/_layout/global.scss
@@ -281,6 +281,10 @@ section {
   padding-bottom: 200px;
   margin-top: 100px;
 
+  @media (max-width: 1700px) {
+    margin-right: var(--nav-height);
+  }
+
   @media (max-width: $mobile-breakpoint) {
     --content-max-width: 600px;
     margin-left: auto;
