set up new routes

--- a/src/routes/_layout/layout.pug
+++ b/src/routes/_layout/layout.pug
@@ -22,7 +22,9 @@ html(lang="en-US")
         li.active
           a(href="/") Me
         li
-          a(href="/projects") Projects
+          a(href="/work") Work
+        li
+          a(href="https://dev.to/bholmesdev") Blog
         li
           a(href="/contact") Contact
 
