--- a/src/routes/work/styles.scss
+++ b/src/routes/work/styles.scss
@@ -1,4 +1,4 @@
-[data-route='projects'] {
+[data-route='work'] {
   $small-desktop-breakpoint: 1350px;
   $tablet-breakpoint: 1200px;
   $mobile-breakpoint: 850px;
