fix project hash issues when switching tabs or clicking close

--- a/src/routes/projects/page.pug
+++ b/src/routes/projects/page.pug
@@ -78,5 +78,5 @@ section#complete-section(style="--section-color: var(--red)")
         p.body !{project.body}
   .background
   nav
-    a.close-btn(href="#")
+    a#close-btn(href="#" aria-label="Close project slide out window")
       +link-icon('close')
