--- a/src/routes/contact/index.pug
+++ b/src/routes/contact/index.pug
@@ -5,7 +5,7 @@ section
   img(src="/static/me.jpg" alt="{content.artwork.alt}" width=600 height=718)
   p.tagline
     :markdown-it(inline)
-      Let's chat! I'm always available through my [Twitter DMs](https://twitter.com/BHolmesDev) and [by email](mailto:bholmesdev@gmail.com), but you can just fill out this shiny form :)
+      Let's chat! I'm always available through my [Twitter DMs](https://twitter.com/BHolmesDev) and [by email](mailto:bholmesdev@gmail.com), but you can fill out this shiny form too :)
   form(method="POST" name="contact" data-netlify="true" action="/contact-submitted")
     input(type="hidden" name="form-name" value="contact")
     label(for="name") Name
