refactor section observer to use IDs, highlight nav section link

--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -136,4 +136,4 @@ div#icreate-section(style="--section-color: var(--purple)")
             img(src="/static/die-2.svg" alt="")
 
       button#generate-random-project.cta-link Another random project
-      a.icon-after.icon__arrow-right(href="/projects") Just show me all of them
+      a.icon-after.icon__arrow-right(href="/work") Just show me all of them
