--- a/src/routes/contact/index.pug
+++ b/src/routes/contact/index.pug
@@ -2,7 +2,7 @@ include ../icons
 
 section
   h1 Contact Me
-  img(src="/static/me.jpg" alt="{content.artwork.alt}" width=600 height=718)
+  img(src="/static/me-on-phone.jpg" alt="{content.artwork.alt}" width=600 height=718)
   p.tagline
     :markdown-it(inline)
       Let's chat! I'm always available through my [Twitter DMs](https://twitter.com/BHolmesDev) and [by email](mailto:bholmesdev@gmail.com), but you can fill out this shiny form too :)
