fix font load times

--- a/src/routes/_layout/layout.pug
+++ b/src/routes/_layout/layout.pug
@@ -3,6 +3,7 @@ html(lang="en-US")
   head
     title #{meta.title}
     link(rel="stylesheet" href="styles.css")
+    link(rel="preload" href="https://use.typekit.net/liz3dnm.css" as="style")
     link(rel="stylesheet" href="https://use.typekit.net/liz3dnm.css")
     head(profile="http://www.w3.org/2005/10/profile")
     link(rel="icon" type="img/jpg" href="favicon.jpg")
