--- a/src/routes/_layout/layout.pug
+++ b/src/routes/_layout/layout.pug
@@ -11,7 +11,7 @@ html(lang="en-US")
 
     meta(name="twitter:card" content="summary" key="twcard")
     meta(name="twitter:creator" content="bholmesdev" key="twhandle")
-    meta(property="og:url" content=routeUrl key="ogurl")
+    meta(property="og:url" content='https://bholmesdev-v3.netlify.app' + routeUrl key="ogurl")
     meta(property="og:image" content='https://bholmesdev-v3.netlify.app' + meta.imageSrc key="ogimage")
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
