add cta link to contact submitted

--- a/src/routes/contact-submitted/index.pug
+++ b/src/routes/contact-submitted/index.pug
@@ -1,11 +1,11 @@
 include ../icons
 
 section
-  h1 Thanks for reaching out!
+  h1 Thanks for reaching out!
   p.tagline
     :markdown-it(inline)
       I'll get back to you soon. In the meantime though...
-  a.cta-link
+  a.cta-link(href="https://dev.to/bholmesdev")
     | Check out my latest blog posts
     +icon("devto")
   
