--- a/src/routes/_layout/layout.pug
+++ b/src/routes/_layout/layout.pug
@@ -9,8 +9,8 @@ html(lang="en-US")
     link(rel="icon" type="img/jpg" href="favicon.jpg")
     meta(name='viewport' content='width=device-width,initial-scale=1.0')
 
-    meta(name="twitter:card" content="summary" key="twcard")
-    meta(name="twitter:creator" content="bholmesdev" key="twhandle")
+    meta(name="twitter:card" content="summary_large_image" key="twcard")
+    meta(name="twitter:creator" content="@bholmesdev" key="twhandle")
     meta(property="og:url" content='https://bholmesdev-v3.netlify.app' + routeUrl key="ogurl")
     meta(property="og:image" content='https://bholmesdev-v3.netlify.app' + meta.imageSrc key="ogimage")
     meta(property="og:image:width" content="1200")
