--- a/src/routes/_layout/layout.pug
+++ b/src/routes/_layout/layout.pug
@@ -10,9 +10,10 @@ html(lang="en-US")
     meta(name='viewport' content='width=device-width,initial-scale=1.0')
 
     meta(name="twitter:card" content="summary_large_image" key="twcard")
+    meta(name="twitter:site" content="@bholmesdev" key="twsite")
     meta(name="twitter:creator" content="@bholmesdev" key="twhandle")
-    meta(property="og:url" content='https://bholmesdev-v3.netlify.app' + routeUrl key="ogurl")
-    meta(property="og:image" content='https://bholmesdev-v3.netlify.app' + meta.imageSrc key="ogimage")
+    meta(property="og:url" content='https://bholmes.dev' + routeUrl key="ogurl")
+    meta(property="og:image" content='https://bholmes.dev' + meta.imageSrc key="ogimage")
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
     meta(property="og:site_name" content="Ben Holmes" key="ogsitename")
