update recruiter section

--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -47,7 +47,9 @@ section#inbrief-section
 
     .content__recruiter
       :markdown-it
-        I'm extremely hireable!
+        I'm currently employed at [Peloton Interactive](https://onepeloton.com), so I'm not looking for a job right now.
+
+        Still, to highlight some of my skills: I'm a full stack web developer proficient in most frontend frameworks **(ReactJS, SvelteJS, Angular 2+)**. I'm also comfortable with accessibility principles in HTML, unit testing, and UX mockup design. If you're so inclined...
 
         [Take my resume](https://drive.google.com/file/d/1_Dix3-mAHaPVNEB2xIZeZ9RMkZRJ0A8O/view?usp=sharing)
 
