update recruiter section

--- a/src/routes/me/page.pug
+++ b/src/routes/me/page.pug
@@ -47,11 +47,11 @@ section#inbrief-section
 
     .content__recruiter
       :markdown-it
-        I'm currently employed at [Peloton Interactive](https://onepeloton.com), so I'm not looking for a job right now.
+        Sorry! I'm currently employed at [Peloton](https://onepeloton.com), so I'm not looking for a job right now.
 
-        Still, to highlight some of my skills: I'm a full stack web developer proficient in most frontend frameworks **(ReactJS, SvelteJS, Angular 2+)**. I'm also comfortable with accessibility principles in HTML, unit testing, and UX mockup design. If you're so inclined...
+        Still, here's all my skills / buzzwords you were going to search for: **NodeJS, ES6, ReactJS, JAMStack, NextJS, semantic HTML, understanding of a11y, Angular 2+, SvelteJS, SCSS, NoSQL, OOP programming, C Basic, unit testing w/ Jest**... Okay I'm getting tired typing.
 
-        [Take my resume](https://drive.google.com/file/d/1_Dix3-mAHaPVNEB2xIZeZ9RMkZRJ0A8O/view?usp=sharing)
+        [Just take my resume](https://drive.google.com/file/d/1_Dix3-mAHaPVNEB2xIZeZ9RMkZRJ0A8O/view?usp=sharing)
 
 div#iteach-section(style="--section-color: var(--red)")
   section.section__summary
