--- a/src/routes/_layout/layout.pug
+++ b/src/routes/_layout/layout.pug
@@ -8,16 +8,16 @@ html(lang="en-US")
     link(rel="icon" type="img/jpg" href="favicon.jpg")
     meta(name='viewport' content='width=device-width,initial-scale=1.0')
 
-    meta(name="twitter:card" content="summary_large_image" key="twcard")
-    meta(name="twitter:site" content="@bholmesdev" key="twsite")
-    meta(name="twitter:creator" content="@bholmesdev" key="twhandle")
-    meta(property="og:url" content='https://bholmes.dev' + routeUrl key="ogurl")
-    meta(property="og:image" content='https://bholmes.dev' + meta.imageSrc key="ogimage")
+    meta(name="twitter:card" content="summary_large_image")
+    meta(name="twitter:site" content="@bholmesdev")
+    meta(name="twitter:creator" content="@bholmesdev")
+    meta(property="og:url" content='https://bholmes.dev' + routeUrl)
+    meta(property="og:image" content='https://bholmes.dev' + meta.imageSrc)
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
-    meta(property="og:site_name" content="Ben Holmes" key="ogsitename")
-    meta(property="og:title" content=meta.title key="ogtitle")
-    meta(property="og:description" content=meta.description key="ogdesc")
+    meta(property="og:site_name" content="Ben Holmes")
+    meta(property="og:title" content=meta.title)
+    meta(property="og:description" content=meta.description)
 
   body
     nav#site-navigation
