add description to meta

--- a/src/routes/_layout/layout.pug
+++ b/src/routes/_layout/layout.pug
@@ -11,6 +11,7 @@ html(lang="en-US")
     meta(name="twitter:card" content="summary_large_image")
     meta(name="twitter:site" content="@bholmesdev")
     meta(name="twitter:creator" content="@bholmesdev")
+    meta(property="description" content=meta.description)
     meta(property="og:url" content='https://bholmes.dev' + routeUrl)
     meta(property="og:image" content='https://bholmes.dev' + meta.imageSrc)
     meta(property="og:image:width" content="1200")
