--- a/src/routes/me/styles.scss
+++ b/src/routes/me/styles.scss
@@ -432,7 +432,7 @@
         align-self: center;
       }
       .min-read {
-        @include subheader;
+        @include header;
         grid-area: min-read;
         margin: 0;
         font-size: 16px;
@@ -513,7 +513,7 @@
       padding: 5px 10px;
       margin: 0;
       color: var(--body-color);
-      @include subheader;
+      @include header;
       font-size: 20px;
       font-weight: bold;
 
