feat: change nav font back to header font

--- a/src/routes/_layout/nav-styles.scss
+++ b/src/routes/_layout/nav-styles.scss
@@ -13,7 +13,7 @@
 
   a,
   a:visited {
-    @include subheader;
+    @include header;
     font-size: inherit;
     color: var(--body-color);
     margin: 50px 30px;
@@ -67,6 +67,7 @@
     }
     a.active {
       opacity: 1;
+      font-weight: bold;
     }
   }
 
