--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -1,8 +1,7 @@
 html(lang="en-US")
-  head
+  head !{slinkit.styles}
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
-    link(rel='stylesheet' href=page.url + '__styles.css')
     title #{title}
 
   header
