--- a/src/_layouts/index.scss
+++ b/src/_layouts/index.scss
@@ -1,6 +1,7 @@
 $font-path: '/assets/fonts/Atkinson/';
 
 @import '../_includes/mixins.scss';
+@import '../_includes/nav-styles.scss';
 
 @font-face {
   font-family: Atkinson;
