feat: finish nav setup

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -33,11 +33,11 @@ html(lang="en-US")
         li
           a(href="/" class=page.url === '/' ? 'active' : '') Me
         li
-          a(href="/work" class=page.url === '/work/' ? 'active' : '') Work
+          a(href="/work/" class=page.url === '/work/' ? 'active' : '') Work
         li
           a(href="https://dev.to/bholmesdev") Blog
         li
-          a(href="/contact" class=page.url === '/contact/' ? 'active' : '') Contact
+          a(href="/contact/" class=page.url === '/contact/' ? 'active' : '') Contact
 
       button#primary-nav-toggle.mobile
         .stripe-top
