feat: update metadata for SEO

--- a/src/work.pug
+++ b/src/work.pug
@@ -1,3 +1,9 @@
+---
+title: Ben's Work
+description: Everything I've built over the years, from JAMstack apps to Java Swing!
+image: /assets/og-images/work.jpg
+---
+
 include icons
 
 mixin video(project)
