--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+- var defaultTitle = "Ben Holmes"
+- var defaultDescription = "I'm a web dev, UX freak, and restless tinkerer. Let me teach you the art of building websites!"
+- var defaultImage = "/assets/og-images/me.jpg"
+
 html(lang="en-US")
   head !{slinkit.styles}
-    title #{title}
+    title #{title || defaultTitle}
     link(rel="preload" href="https://use.typekit.net/liz3dnm.css" as="style")
     link(rel="stylesheet" href="https://use.typekit.net/liz3dnm.css")
     link(rel="icon" type="img/jpg" href="favicon.jpg")
@@ -10,14 +14,14 @@ html(lang="en-US")
     meta(name="twitter:card" content="summary_large_image")
     meta(name="twitter:site" content="@bholmesdev")
     meta(name="twitter:creator" content="@bholmesdev")
-    meta(name="description" content=description)
-    meta(property="og:url" content='https://bholmes.dev' + routeUrl)
-    meta(property="og:image" content='https://bholmes.dev' + imageSrc)
+    meta(name="description" content=description || defaultDescription)
+    meta(property="og:url" content=page.url)
+    meta(property="og:image" content='https://bholmes.dev' + (image || defaultImage))
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
     meta(property="og:site_name" content="Ben Holmes")
-    meta(property="og:title" content=title)
-    meta(property="og:description" content=description)
+    meta(property="og:title" content=title || defaultTitle)
+    meta(property="og:description" content=description || defaultDescription)
 
   body
     nav#site-navigation
