--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -8,7 +8,7 @@ html(lang="en-US")
     title #{title || defaultTitle}
     link(rel="preload" href="https://use.typekit.net/liz3dnm.css" as="style")
     link(rel="stylesheet" href="https://use.typekit.net/liz3dnm.css")
-    link(rel="icon" type="img/jpg" href="favicon.jpg")
+    link(rel="icon" type="img/jpg" href="/assets/favicon.jpg")
     meta(name='viewport' content='width=device-width,initial-scale=1.0')
 
     // TODO: automatically generate these at buildtime
