feat: add preload for html fetches

--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -19,6 +19,10 @@ html(lang="en-US")
     link(rel="modulepreload" href="/_layouts/__client.mjs")
     link(rel="modulepreload" href="/_layouts/__data.mjs")
 
+    link(rel="preload" as="fetch" href="/index.html")
+    link(rel="preload" as="fetch" href="/work/index.html")
+    link(rel="preload" as="fetch" href="/contact/index.html")
+
     meta(name="twitter:card" content="summary_large_image")
     meta(name="twitter:site" content="@bholmesdev")
     meta(name="twitter:creator" content="@bholmesdev")
